index blocks and transactions ok

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ POSTGRES_PASSWORD="postgres"
 POSTGRES_DB="eth-indexer"
 POSTGRES_CREATE_TABLE_ORDER="config,blocks,transactions,transactions_receipts,addresses,contracts,tokens,token_transfers"
 
+BATCH_SIZE=1000
