--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,15 @@ description = "Ethereum Indexer"
 
 [dependencies]
 dotenv = "0.15.0"
-postgres = "0.19.7"
+postgres = {version = "0.19.7", features = ["with-serde_json-1"]}
 tokio-postgres = "0.7.1"
 ethers = { version = "2.0.10", features = ["abigen", "ws", "rustls"] }
 tokio = { version = "1.32", features = ["full"] }
 eyre = "0.6.8"
+num = "0.4.1"
+serde_json = "1.0.107"
+bb8 = "0.8.1"
+bb8-postgres = "0.8.1"
+rust_decimal = { version = "1.32.0", features = ["db-postgres"] }
+env_logger = "0.9.0"
+log = "0.4.14"
