index receipts and addresses ok

--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ POSTGRES_DB="eth-indexer"
 POSTGRES_CREATE_TABLE_ORDER="config,blocks,transactions,transactions_receipts,addresses,contracts,tokens,token_transfers"
 
 BATCH_SIZE=1000
+START_BLOCK=0
+END_BLOCK=-1
