--- a/.env
+++ b/.env
@@ -10,6 +10,6 @@ POSTGRES_PASSWORD="postgres"
 POSTGRES_DB="eth-indexer"
 POSTGRES_CREATE_TABLE_ORDER="config,blocks,transactions,transactions_receipts,addresses,contracts,tokens,token_transfers"
 
-BATCH_SIZE=1000
+BATCH_SIZE=500 # above 500 the blocks per second drops
 START_BLOCK=0
 END_BLOCK=-1
