--- a/.env
+++ b/.env
@@ -11,5 +11,8 @@ POSTGRES_DB="eth-indexer"
 POSTGRES_CREATE_TABLE_ORDER="config,blocks,transactions,transactions_receipts,addresses,contracts,tokens,token_transfers"
 
 BATCH_SIZE=500 # above 500 the blocks per second drops
-START_BLOCK=0
-END_BLOCK=-1
+START_BLOCK=138213
+END_BLOCK=168213
+
+BLOCKSCOUT_ENDPOINT=https://blockscout.dev.hydrasquare-holding.com
+BLOCKSCOUT_API_KEY=6dc17aa2-3362-4e15-a2b4-704b0682e052
