--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ dotenv = "0.15.0"
 postgres = {version = "0.19.7", features = ["with-serde_json-1"]}
 tokio-postgres = "0.7.1"
 ethers = { version = "2.0.10", features = ["abigen", "ws", "rustls"] }
+ethers-contract = "2.0.10"
 tokio = { version = "1.32", features = ["full"] }
 eyre = "0.6.8"
 num = "0.4.1"
