token transfert ok

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-VERSION=1.1
+VERSION=1.0
+LOG_LEVEL=info
 
 HTTP_RPC_ENDPOINT="https://rpc.dev.hydrasquare-holding.com"
 WS_RPC_ENDPOINT="wss://ws.dev.hydrasquare-holding.com"
@@ -8,11 +9,11 @@ POSTGRES_PORT="5432"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="postgres"
 POSTGRES_DB="eth-indexer"
-POSTGRES_CREATE_TABLE_ORDER="config,blocks,transactions,transactions_receipts,addresses,contracts,tokens,token_transfers"
+POSTGRES_CREATE_TABLE_ORDER="config,blocks,transactions,transactions_receipts,addresses,contracts,tokens,token_transfers,logs"
 
 BATCH_SIZE=500 # above 500 the blocks per second drops
-START_BLOCK=138213
-END_BLOCK=168213
+START_BLOCK=0
+END_BLOCK=-1
 
 BLOCKSCOUT_ENDPOINT=https://blockscout.dev.hydrasquare-holding.com
 BLOCKSCOUT_API_KEY=6dc17aa2-3362-4e15-a2b4-704b0682e052
