--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VERSION=1.0
-LOG_LEVEL=info
+LOG_LEVEL=warn #info, warn, debug, error
 
 HTTP_RPC_ENDPOINT="https://rpc.dev.hydrasquare-holding.com"
 WS_RPC_ENDPOINT="wss://ws.dev.hydrasquare-holding.com"
