--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ POSTGRES_HOST="localhost"
 POSTGRES_PORT="5432"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="postgres"
-POSTGRES_DB="eth-indexer"
+POSTGRES_DATABASE="eth-indexer"
 POSTGRES_CREATE_TABLE_ORDER="config,blocks,transactions,transactions_receipts,addresses,contracts,tokens,token_transfers,logs"
 
 BATCH_SIZE=500 # above 500 the blocks per second drops
