docker support ok

--- a/.env.production
+++ b/.env.production
@@ -1,15 +1,15 @@
-ETH_INDEXER=dev
+ETH_INDEXER=production
 VERSION=1.0
-LOG_LEVEL=info #info, warn, debug, error
+LOG_LEVEL=warn #info, warn, debug, error
 
 HTTP_RPC_ENDPOINT="https://rpc.dev.hydrasquare-holding.com"
 WS_RPC_ENDPOINT="wss://ws.dev.hydrasquare-holding.com"
 
-POSTGRES_HOST="localhost"
+POSTGRES_HOST="blockchain-dev-postgres.blockchain-dev.svc.cluster.local"
 POSTGRES_PORT="5432"
 POSTGRES_USER="postgres"
-POSTGRES_PASSWORD="postgres"
-POSTGRES_DATABASE="eth-indexer"
+POSTGRES_PASSWORD=""
+POSTGRES_DATABASE="ethereum"
 POSTGRES_CREATE_TABLE_ORDER="config,blocks,transactions,transactions_receipts,addresses,contracts,tokens,token_transfers,logs"
 
 BATCH_SIZE=500 # above 500 the blocks per second drops
