--- a/helm/eth-indexer/templates/cronjob.yaml
+++ b/helm/eth-indexer/templates/cronjob.yaml
@@ -1,4 +1,4 @@
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: check-last-blocks-cronjob
@@ -20,7 +20,7 @@ spec:
           restartPolicy: OnFailure
 
 ---
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: verify-blocks-cronjob
