--- a/.env.production
+++ b/.env.production
@@ -8,7 +8,7 @@ WS_RPC_ENDPOINT="wss://ws.dev.hydrasquare-holding.com"
 POSTGRES_HOST="blockchain-dev-postgres.blockchain-dev.svc.cluster.local"
 POSTGRES_PORT="5432"
 POSTGRES_USER="postgres"
-POSTGRES_PASSWORD=""
+POSTGRES_PASSWORD="postgres"
 POSTGRES_DATABASE="ethereum"
 POSTGRES_CREATE_TABLE_ORDER="config,blocks,transactions,transactions_receipts,addresses,contracts,tokens,token_transfers,logs"
 
