speed up indexer using multiple WS and DB pools

--- a/.env
+++ b/.env
@@ -12,7 +12,9 @@ POSTGRES_PASSWORD="postgres"
 POSTGRES_DATABASE="eth-indexer"
 POSTGRES_CREATE_TABLE_ORDER="config,blocks,transactions,transactions_receipts,addresses,contracts,tokens,token_transfers,logs"
 
-BATCH_SIZE=500 # above 500 the blocks per second drops
+MAX_CONCURRENCY=800 # also = to the batch size.
+NB_OF_WS_CONNECTIONS=100 # don't open too many WS connections, max around 100
+NB_OF_DB_CONNECTIONS=20 # don't open too many DB connections, max around 10
 START_BLOCK=0
 END_BLOCK=-1
 
