fix for new cluster

--- a/.env.luc
+++ b/.env.luc
@@ -1,20 +1,20 @@
-ETH_INDEXER=production
+ETH_INDEXER=luc
 VERSION=1.0
 LOG_LEVEL=warn #info, warn, debug, error
 
 HTTP_RPC_ENDPOINT="https://rpc.dev.bcf-lab.com"
 WS_RPC_ENDPOINT="wss://ws.dev.bcf-lab.com"
 
-POSTGRES_HOST="blockchain-dev-postgres.blockchain-dev.svc.cluster.local"
-POSTGRES_PORT="5432"
+POSTGRES_HOST="localhost"
+POSTGRES_PORT="5433"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="postgres"
 POSTGRES_DATABASE="ethereum"
 POSTGRES_CREATE_TABLE_ORDER="config,blocks,transactions,transactions_receipts,addresses,contracts,tokens,token_transfers,logs"
 
-MAX_CONCURRENCY=100 # also = to the batch size.
-NB_OF_WS_CONNECTIONS=2 # don't open too many WS connections, max around 100
-NB_OF_DB_CONNECTIONS=2 # don't open too many DB connections, max around 10
+MAX_CONCURRENCY=100 #800 # also = to the batch size.
+NB_OF_WS_CONNECTIONS=10 #100 # don't open too many WS connections, max around 100
+NB_OF_DB_CONNECTIONS=10 # don't open too many DB connections, max around 10
 START_BLOCK=0
 END_BLOCK=-1
 
