--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ ETH_INDEXER=dev
 VERSION=1.0
 LOG_LEVEL=info #info, warn, debug, error
 
-HTTP_RPC_ENDPOINT="https://rpc.dev.hydrasquare-holding.com"
-WS_RPC_ENDPOINT="wss://ws.dev.hydrasquare-holding.com"
+HTTP_RPC_ENDPOINT="https://rpc.dev.bcf-lab.com"
+WS_RPC_ENDPOINT="wss://ws.dev.bcf-lab.com"
 
 POSTGRES_HOST="localhost"
 POSTGRES_PORT="5432"
@@ -18,5 +18,5 @@ NB_OF_DB_CONNECTIONS=20 # don't open too many DB connections, max around 10
 START_BLOCK=0
 END_BLOCK=-1
 
-BLOCKSCOUT_ENDPOINT=https://blockscout.dev.hydrasquare-holding.com
+BLOCKSCOUT_ENDPOINT=https://blockscout.dev.bcf-lab.com
 BLOCKSCOUT_API_KEY=6dc17aa2-3362-4e15-a2b4-704b0682e052
