--- a/helm/eth-indexer/templates/configmap.yaml
+++ b/helm/eth-indexer/templates/configmap.yaml
@@ -7,8 +7,8 @@ data:
     VERSION: "1.0"
     LOG_LEVEL: "warn" #info, warn, debug, error
 
-    HTTP_RPC_ENDPOINT: "https://rpc.dev.hydrasquare-holding.com"
-    WS_RPC_ENDPOINT: "wss://ws.dev.hydrasquare-holding.com"
+    HTTP_RPC_ENDPOINT: "https://rpc.dev.bcf-lab.com"
+    WS_RPC_ENDPOINT: "wss://ws.dev.bcf-lab.com"
 
     POSTGRES_HOST: "blockchain-dev-postgres.blockchain-dev.svc.cluster.local"
     POSTGRES_PORT: "5432"
@@ -21,5 +21,5 @@ data:
     START_BLOCK: "0"
     END_BLOCK: "-1"
 
-    BLOCKSCOUT_ENDPOINT: "https://blockscout.dev.hydrasquare-holding.com"
+    BLOCKSCOUT_ENDPOINT: "https://blockscout.dev.bcf-lab.com"
     BLOCKSCOUT_API_KEY: "6dc17aa2-3362-4e15-a2b4-704b0682e052"
