--- a/helm/eth-indexer/templates/configmap.yaml
+++ b/helm/eth-indexer/templates/configmap.yaml
@@ -10,7 +10,7 @@ data:
     HTTP_RPC_ENDPOINT: "https://rpc.dev.bcf-lab.com"
     WS_RPC_ENDPOINT: "wss://ws.dev.bcf-lab.com"
 
-    POSTGRES_HOST: "blockchain-dev-postgres.blockchain-dev.svc.cluster.local"
+    POSTGRES_HOST: "web3-postgres.web3.svc.cluster.local"
     POSTGRES_PORT: "5432"
     POSTGRES_USER: "postgres"
     POSTGRES_PASSWORD: ""
